--- a/test-features/file-uploads.mdx
+++ b/test-features/file-uploads.mdx
@@ -4,6 +4,12 @@ description: Testing file uploads with default and custom files
 icon: 'file-arrow-up'
 ---
 
+This page covers how the AI agent handles file upload interactions **during test execution** - such as testing file input forms, drag-and-drop upload areas, or document import features in your application.
+
+<Note>
+Looking to provide context documents to the AI during test creation? See [Uploading Files and Documents](/core-concepts/ai-chat-assistant#uploading-files-and-documents) for uploading PDFs and specs to chat conversations.
+</Note>
+
 ## Default Test Files
 
 QA.tech provides two default test files that are available for all tests:
