--- a/integrations/jira.mdx
+++ b/integrations/jira.mdx
@@ -33,7 +33,7 @@ Once configured, you can export any QA.tech issue to Jira:
     Click on an issue to view its details.
   </Step>
   <Step title="Click Export">
-    In the **Link** section, click **"Create Issue in Jira"**. The issue will be created in your configured Jira project.
+    In the **Link** section, click **"Create ticket"**. The issue will be created in your configured Jira project.
   </Step>
 </Steps>
 
