--- a/integrations/linear.mdx
+++ b/integrations/linear.mdx
@@ -33,7 +33,7 @@ Once configured, you can export any QA.tech issue to Linear:
     Click on an issue to view its details.
   </Step>
   <Step title="Click Export">
-    In the **Link** section, click **"Create Issue in Linear"**. The issue will be created in your configured Linear team.
+    In the **Link** section, click **"Create issue"**. The issue will be created in your configured Linear team.
   </Step>
 </Steps>
 
