--- a/integrations/trello.mdx
+++ b/integrations/trello.mdx
@@ -33,7 +33,7 @@ Once configured, you can export any QA.tech issue to Trello:
     Click on an issue to view its details.
   </Step>
   <Step title="Click Export">
-    In the **Link** section, click **"Create Card in Trello"**. A card will be created in your configured Trello list.
+    In the **Link** section, click **"Create task"**. A card will be created in your configured Trello list.
   </Step>
 </Steps>
 
