--- a/core-concepts/test-plans.mdx
+++ b/core-concepts/test-plans.mdx
@@ -40,6 +40,7 @@ When adding test cases to a test plan, keep in mind:
 Test Plans are the primary way to run tests from CI/CD pipelines. You can trigger test plans programmatically via the QA.tech REST API from any CI/CD system. See [CI/CD Integration](/configuration/ci-cd-integration) for an overview of integration options and platform-specific guides.
 
 **How it works:**
+
 1. Create a test plan and add test cases to it
 2. Get the test plan's **Test Plan Short ID** ([6-character ID](/configuration/gitlab#finding-your-test-plan-short-id) visible in the test plan URL)
 3. Trigger the test plan via API from your CI/CD pipeline
@@ -69,6 +70,7 @@ Read more about setting up [GitHub Actions](/configuration/github-actions).
 Test Plans can be triggered programmatically through the API. For detailed information about available endpoints and parameters, refer to the [API reference documentation](/api-reference/start-run).
 
 **Example:**
+
 ```bash
 curl -X POST https://app.qa.tech/api/projects/YOUR_PROJECT_UUID/runs \
   -H "Authorization: Bearer YOUR_API_TOKEN" \
@@ -86,8 +88,8 @@ You can configure Test Plans to run automatically at specific times or intervals
 
 <Steps>
   <Step title="Navigate to Test Plans">
-    Go to [Test Plans](https://app.qa.tech/current-project/test-plans)
-    in your project dashboard.
+    Go to [Test Plans](https://app.qa.tech/current-project/test-plans) in your
+    project dashboard.
   </Step>
   <Step title="Select Test Plan">
     Click on the test plan you want to schedule.
@@ -131,13 +133,11 @@ This means that while a single test case may take several minutes to execute, ru
 ## Best Practices
 
 1. **Optimize Test Organization**:
-
    - Group related test cases together
    - Create separate plans for different testing frequencies
    - Keep plans focused and maintainable
 
 2. **Dependency Management**:
-
    - Be aware that dependent test cases will be included automatically
    - Review dependencies when setting up new test plans
 
@@ -155,3 +155,64 @@ This means that while a single test case may take several minutes to execute, ru
    - Override the project's default Slack channel for test plan-specific routing
    - Add organization members as email recipients to ensure stakeholders receive run completion notifications
    - See [Notifications](/core-concepts/notifications) for detailed setup instructions
+
+## Test Plan Parameters
+
+Test plan parameters let you configure environment and device preset settings per application. When a test plan runs, each test uses the environment configured for its application.
+
+### Configuration Levels
+
+Parameters follow a precedence hierarchy where later settings override earlier ones:
+
+```
+Project Settings (defaults for all runs)
+└── Test Plan Parameters (override per test plan)
+    └── Per-Run API (override per individual run)
+```
+
+### Configuring Parameters in the UI
+
+Navigate to your test plan and expand the **Parameters** section. You'll see a card for each application that has test cases in the plan.
+
+| Setting | How to Configure | Can Clear? |
+|---------|------------------|------------|
+| **Environment** | Select from dropdown | No - always required |
+| **Device Preset** | Select from dropdown, or choose "Default" to use project defaults | Yes - select "Default" |
+
+<Note>
+Applications only appear in the Parameters section if they have test cases included in the test plan.
+</Note>
+
+### How Tests Execute with Multiple Applications
+
+Each test case belongs to **one application** and runs **once** using that application's configured environment. Tests do not run across multiple applications.
+
+**Example:**
+- Test Plan contains: Test A (App 1), Test B (App 1), Test C (App 2)
+- Parameters: App 1 → Production, App 2 → Staging
+- Execution:
+  - Test A runs on Production (App 1's environment)
+  - Test B runs on Production (App 1's environment)
+  - Test C runs on Staging (App 2's environment)
+
+This means different tests in the same test plan can run against different environments based on their application assignment.
+
+### API Overrides
+
+You can override parameters at runtime via the [Start Run API](/api-reference/start-run). API overrides take highest precedence:
+
+```json
+{
+  "testPlanShortId": "abc123",
+  "applications": {
+    "frontend-app": {
+      "environment": {
+        "url": "https://preview.example.com"
+      },
+      "devicePresetId": "uuid-of-device-preset"
+    }
+  }
+}
+```
+
+See [Start Run API](/api-reference/start-run) for full details on the `applications` override format.
